Fix header items wrapping

--- a/ui/static/css/common.css
+++ b/ui/static/css/common.css
@@ -122,6 +122,7 @@ a:hover {
 .page-footer li {
     list-style-type: none;
     line-height: 1.8em;
+    white-space: nowrap;
 }
 
 .page-header ul a .icon {
